fixed error where instruction text appeared in dark mode

--- a/src/styles.css
+++ b/src/styles.css
@@ -15,11 +15,12 @@ body {
 }
 
 .hidden {
- color: whitesmoke;
+ opacity: 0;
 }
 
 .display {
  color: red;
+ opacity: 1;
 }
 
 /* header and footer */
